# strands_qsr_lib

./: .gitignore  LICENSE  README.md
docs/: Makefile  README.md  (+3 more)
qsr_lib/: CHANGELOG.rst  CMakeLists.txt  README  README.md  package.xml  setup.py
qsr_lib/cfg/: defaults.ini  defaults.yml  example.yml
qsr_lib/dbg/: dbg_cardinal_directions.py  dbg_cone_directions.py  dbg_rcc3.py  dbg_rcc8.py  dbg_template_bounding_boxes_qsrs.py  dbg_world_qsr_trace_slicing_methods.py  dbg_world_trace_slicing_methods.py
qsr_lib/docs/: README.md  conf.py  index.rst  make.bat
qsr_lib/docs/rst/: qsrlib.qsrlib.rst  qsrlib_io.rst  qsrlib_io.world_qsr_trace.rst  qsrlib_qsrs.qsr_abstractclass.rst  qsrlib_qsrs.qsr_arg_prob_relations_distance.rst  qsrlib_qsrs.qsr_arg_relations_distance.rst  qsrlib_qsrs.qsr_cone_direction_bounding_boxes_centroid_2d.rst  qsrlib_qsrs.qsr_dyadic_abstractclass.rst  qsrlib_qsrs.qsr_moving_or_stationary.rst  qsrlib_qsrs.qsr_qtc_bc_simplified.rst  qsrlib_qsrs.qsr_rcc2_rectangle_bounding_boxes_2d.rst  qsrlib_qsrs.qsr_rcc_abstractclass.rst  qsrlib_qsrs.rst  qsrlib_ros.rst
qsr_lib/msg/: ManyObjectsData.msg  ObjectData.msg  ObjectsQSRs.msg  QSRs.msg
qsr_lib/scripts/: basic_qsr_visualiser.py  example.py  example_extended.py  example_ros_client.py  example_standalone  example_standalone.py  legacy_example_standalone.py  mwe.py  qsrlib_ros_server.py  qstag_example.py  test.py  tpcc_test.py
qsr_lib/scripts/ros/: example_using_builtin_ros_client.py  qsr_lib_ros_client.py  qsr_lib_ros_server.py  qsrlib_ros_client.py
qsr_lib/scripts/standalone/: example.py  input_data.py  qsrlib.py
qsr_lib/share/qtc_data/: qtc_example.csv  qtc_real_world_example.csv
qsr_lib/src/qsrlib/: legacy_qsrlib.py  qsrlib.py
qsr_lib/src/qsrlib_io/: qsr_trace.py  world_qsr_trace.py  world_trace.py
qsr_lib/src/qsrlib_legacy/: maker_qsr_abstractclass.py  maker_qsr_qtc_b_simplified.py  output_data.py  qsrlib.py
qsr_lib/src/qsrlib_qsrs/: __init__.py  qsr_abstractclass.py  qsr_arg_prob_relations_distance.py  qsr_arg_relations_abstractclass.py  qsr_arg_relations_distance.py  qsr_cardinal_direction.py  qsr_cardinal_direction_bounding_boxes_centroid_2d.py  qsr_cone_direction_bounding_boxes_centroid_2d.py  qsr_dyadic_abstractclass.py  qsr_monadic_abstractclass.py  qsr_moving_or_stationary.py  qsr_new_mwe.py  qsr_qtc_b_simplified.py  qsr_qtc_bc_simplified.py  qsr_qtc_c_simplified.py  qsr_qtc_simplified_abstractclass.py  qsr_ra.py  qsr_rcc2.py  qsr_rcc2_rectangle_bounding_boxes_2d.py  qsr_rcc3_rectangle_bounding_boxes_2d.py  qsr_rcc4.py  qsr_rcc5.py  qsr_rcc5_rectangle_bounding_boxes_2d.py  qsr_rcc8.py  qsr_rcc8_rectangle_bounding_boxes_2d.py  qsr_rcc_abstractclass.py  qsr_tpcc.py  qsr_triadic_abstractclass.py
qsr_lib/src/qsrlib_qstag/: qsr_episodes.py  qstag.py  utils.py
qsr_lib/src/qsrlib_ros/: qsrlib_ros_client.py
qsr_lib/src/qsrlib_utils/: combinations_and_permutations.py  filters.py  ros_utils.py  utils.py
qsr_lib/src/standalone/: qsrlib.py
qsr_lib/src/world/: world.py
qsr_lib/srv/: QSRsRequest.srv  RequestQSRs.srv
qsr_lib/tests/: abstractclass_unittest.py  abstractclass_unittest_data1.py  abstractclass_unittest_data1_dyadic.py  abstractclass_unittest_data1_monadic.py  abstractclass_unittest_dyadic.py  abstractclass_unittest_monadic.py  abstractclass_unittest_triadic.py  argd_tester.py  argd_tester.test  argprobd_tester.py  argprobd_tester.test  car_dir_tester.py  car_dir_tester.test  cardir_tester.py  cardir_tester.test  coneDir_tester.py  coneDir_tester.test  mos_tester.py  mos_tester.test  multiple_tester.py  multiple_tester.test  mwe_tester.py  mwe_tester.test  qsrlib_object_creation_tester.py  qsrlib_object_creation_tester.test  qtc_tester.py  qtc_tester.test  qtcbcs_tester.py  qtcbcs_tester.test  qtcbs_tester.py  qtcbs_tester.test  qtccs_tester.py  qtccs_tester.test  ra_tester.py  ra_tester.test  rcc2_tester.py  rcc2_tester.test  rcc3_tester.py  rcc3_tester.test  rcc4_tester.py  (+13 more)
qsr_lib/tests/data/: README.md  data1.csv  data1_car_dir_defaults.txt  data1_car_dir_qsrs_for_global_namespace.txt  data1_car_dir_qsrs_for_qsr_namespace.txt  data1_cardir_defaults.txt  data1_cardir_qsrs_for_global_namespace.txt  data1_cardir_qsrs_for_qsr_namespace.txt  data1_coneDir_defaults.txt  data1_coneDir_qsrs_for_global_namespace.txt  data1_coneDir_qsrs_for_qsr_namespace.txt  data1_mos_defaults.txt  data1_mos_q_factor_2p0.txt  data1_mos_qsrs_for_global_namespace.txt  data1_mos_qsrs_for_qsr_namespace.txt  data1_multiple_defaults.txt  data1_multiple_qsrs_for_global_namespace.txt  data1_multiple_qsrs_for_qsr_namespace.txt  data1_multiple_qsrs_for_qsr_namespace_over_global.txt  data1_mwe_defaults.txt  data1_mwe_qsrs_for_global_namespace.txt  data1_mwe_qsrs_for_qsr_namespace.txt  data1_qtcbcs_defaults.txt  data1_qtcbcs_novalidate_nocollapse.txt  data1_qtcbcs_novalidate_nonocollapse.txt  data1_qtcbcs_q_factor_2p0.txt  data1_qtcbcs_qsrs_for_global_namespace.txt  data1_qtcbcs_qsrs_for_qsr_namespace.txt  data1_qtcbcs_validate_nocollapse.txt  data1_qtcbs_defaults.txt  data1_qtcbs_novalidate_nocollapse.txt  data1_qtcbs_novalidate_nonocollapse.txt  data1_qtcbs_q_factor_2p0.txt  data1_qtcbs_qsrs_for_global_namespace.txt  data1_qtcbs_qsrs_for_qsr_namespace.txt  data1_qtcbs_validate_nocollapse.txt  data1_qtccs_defaults.txt  data1_qtccs_novalidate_nocollapse.txt  data1_qtccs_novalidate_nonocollapse.txt  data1_qtccs_q_factor_2p0.txt  (+103 more)
qsr_prob_rep/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
qsr_prob_rep/scripts/: create_pf_models.py  example_hmm_client.py  example_pf_client.py  example_ros_client.py  qsr_prob_rep_ros_server.py  xml_to_dict.py
qsr_prob_rep/src/qsrrep_hmms/: generic_hmm.py  hmm_abstractclass.py  qtc_hmm_abstractclass.py  qtcb_hmm.py  qtcbc_hmm.py  qtcc_hmm.py  rcc3_hmm.py
qsr_prob_rep/src/qsrrep_lib/: rep_abstractclass.py  rep_hmm.py  rep_io.py  rep_io_hmm.py  rep_io_pf.py  rep_lib.py  rep_pf.py
qsr_prob_rep/srv/: QSRProbRep.srv
qsr_prob_rep/tests/: hmm_tester.py  hmm_tester.test  pf_tester.py  pf_tester.test
strands_qsr_lib/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+119 files in other folders)
