<?xml version="1.0"?>
<package>
  <name>qsr_lib</name>
  <version>0.4.1</version>
  <description>The qsr_lib package</description>

  <maintainer email="y.gatsoulis@leeds.ac.uk">Yiannis Gatsoulis</maintainer>
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/strands-project/strands_qsr_lib</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>igraph</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>roslib</run_depend>
  
  <test_depend>rosunit</test_depend>

  <export/>
</package>
